Added release script and CI

--- a/.env
+++ b/.env
@@ -1,12 +1,19 @@
 # Build-time app configuration
-# Target platforms to build for, e.g. linux/amd64,linux/arm64,darwin/amd64,darwin/arm64,windows/amd64,windows/arm64
-PLATFORMS=linux/amd64,linux/arm64
+# Below variables are baked into the binary during the build process.
 APP_NAME="OwnStack Proxy"
 VERSION=1.0.0
+# The URL of the OwnStack Console
+# This is used to redirect the user to the OwnStack Console when the Lambda function is not found.
+# e.g: https://console.ownstack.site/revive?host=ownstack-2.aws-account1.ownstack.site
+CONSOLE_URL=https://console.ownstack.site
+
+# Target platforms to build for, e.g. linux/amd64,linux/arm64,darwin/amd64,darwin/arm64,windows/amd64,windows/arm64
+PLATFORMS=linux/amd64,linux/arm64
 DIST_DIR=dist
 DIST_NAME=ownstack-proxy
 
 # Run-time app configuration
+# Below variables can be optionally set to override the default values when running the app.
 HOST=0.0.0.0
 HTTP_PORT=3000
 HTTPS_PORT=3443
@@ -15,3 +22,5 @@ HTTPS_CERT=./certs/server.crt
 HTTPS_CERT_KEY=./certs/server.key
 HTTPS_CERT_CA=./certs/ca.pem
 LOG_LEVEL=debug
+
+REGISTRY_URL=028957770100.dkr.ecr.us-east-2.amazonaws.com
