--- a/.env
+++ b/.env
@@ -11,6 +11,7 @@ CONSOLE_URL=https://console.ownstack.site
 PLATFORMS=linux/amd64,linux/arm64
 DIST_DIR=dist
 DIST_NAME=ownstack-proxy
+REGISTRY_URL=028957770100.dkr.ecr.us-east-2.amazonaws.com
 
 # Run-time app configuration
 # Below variables can be optionally set to override the default values when running the app.
@@ -23,4 +24,8 @@ HTTPS_CERT_KEY=./certs/server.key
 HTTPS_CERT_CA=./certs/ca.pem
 LOG_LEVEL=debug
 
-REGISTRY_URL=028957770100.dkr.ecr.us-east-2.amazonaws.com
+# AWS Credentials
+# Put to .env.local to test locally
+AWS_REGION=us-east-2
+#AWS_ACCESS_KEY_ID=<your-access-key-id>
+#AWS_SECRET_ACCESS_KEY=<your-secret-access-key>
