--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -82,11 +82,18 @@ jobs:
       - name: Bump version for the next release
         run: ./scripts/version.sh bump
 
+      - name: Upload release asset
+        uses: softprops/action-gh-release@v2.2.1
+        with:
+          files: dist/*
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
       - name: Push the new version to the repository
         run: |
           git config --global --add safe.directory ${{ github.workspace }}
           git config --global user.email "github-actions[bot]@users.noreply.github.com"
           git config --global user.name "github-actions[bot]"
-          git add .
+          git add :
           git commit -m "Bump version" || echo "Nothing to commit"
           git push origin main || echo "Nothing to push"
