--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -82,7 +82,7 @@ jobs:
       - name: Bump version for the next release
         run: ./scripts/version.sh bump
 
-      - name: Upload release asset
+      - name: Upload release binaries
         uses: softprops/action-gh-release@v2.2.1
         with:
           files: dist/*
@@ -91,7 +91,7 @@ jobs:
 
       - name: Push the new version to the repository
         run: |
-          git config --global --add safe.directory ${{ github.workspace }}
+          git config --global --add safe.directory $(pwd)
           git config --global user.email "github-actions[bot]@users.noreply.github.com"
           git config --global user.name "github-actions[bot]"
           git add :
