--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -94,6 +94,5 @@ jobs:
           git config --global --add safe.directory $(pwd)
           git config --global user.email "github-actions[bot]@users.noreply.github.com"
           git config --global user.name "github-actions[bot]"
-          git add :
           git commit -m "Bump version" || echo "Nothing to commit"
-          git push origin main || echo "Nothing to push"
+          git push || echo "Nothing to push"
