--- a/.env
+++ b/.env
@@ -10,7 +10,7 @@ CONSOLE_URL=https://console.ownstack.site
 # Target platforms to build for, e.g. linux/amd64,linux/arm64,darwin/amd64,darwin/arm64,windows/amd64,windows/arm64
 PLATFORMS=linux/amd64,linux/arm64
 DIST_DIR=dist
-DIST_NAME=ownstack-proxy
+DIST_NAME=ownstak-proxy
 REGISTRY_URL=028957770100.dkr.ecr.us-east-2.amazonaws.com
 
 # Run-time app configuration
