--- a/.env
+++ b/.env
@@ -7,8 +7,16 @@ VERSION=0.1.1
 # e.g: https://console.ownstack.site/revive?host=ownstack-2.aws-account1.ownstack.site
 CONSOLE_URL=https://console.ownstack.site
 
-# Target platforms to build for, e.g. linux/amd64,linux/arm64,darwin/amd64,darwin/arm64,windows/amd64,windows/arm64
-PLATFORMS=linux/amd64,linux/arm64
+# Target platforms to build for, e.g. linux/amd64,linux/arm64
+# See: https://pkg.go.dev/internal/platform
+# Examples:
+# linux/amd64 - Linux Distros (Alpine, Debian, Ubuntu, etc...) - x86_64 Intel/AMD 
+# linux/arm64 - Linux Distros (Alpine, Debian, Ubuntu, etc...) - aarch64 Qualcomm Snapdragon / AWS Graviton2
+# darwin/amd64 - macOS on x86_64 - old Intel MacBooks
+# darwin/arm64 - macOS on aarch64 - new M1/M2 MacBooks
+# windows/amd64 - Windows (7,10,11) - x86_64 Intel/AMD 
+# windows/arm64 - Windows (11 ARM) - aarch64 Qualcomm Snapdragon
+PLATFORMS=linux/amd64,linux/arm64,darwin/arm64,darwin/amd64,windows/amd64,windows/arm64
 DIST_DIR=dist
 DIST_NAME=ownstak-proxy
 REGISTRY_URL=028957770100.dkr.ecr.us-east-2.amazonaws.com
