--- a/.env
+++ b/.env
@@ -1,11 +1,11 @@
 # Build-time app configuration
 # Below variables are baked into the binary during the build process.
-APP_NAME="OwnStack Proxy"
+APP_NAME="OwnStak Proxy"
 VERSION=0.1.1
-# The URL of the OwnStack Console
-# This is used to redirect the user to the OwnStack Console when the Lambda function is not found.
-# e.g: https://console.ownstack.site/revive?host=ownstack-2.aws-account1.ownstack.site
-CONSOLE_URL=https://console.ownstack.site
+# The URL of the OwnStak Console
+# This is used to redirect the user to the OwnStak Console when the Lambda function is not found.
+# e.g: https://console.ownstak.com/revive?host=ownstak-2.aws-account1.ownstak.link
+CONSOLE_URL=https://console.ownstak.com
 
 # Target platforms to build for, e.g. linux/amd64,linux/arm64
 # See: https://pkg.go.dev/internal/platform
