Added image optimizer (#4)
* Added image optimizer feature

* Updated dockerfile

* Fixed PNG errors

* Updated README

* Updated README

--- a/.env
+++ b/.env
@@ -16,7 +16,7 @@ CONSOLE_URL=https://console.ownstak.com
 # darwin/arm64 - macOS on aarch64 - new M1/M2 MacBooks
 # windows/amd64 - Windows (7,10,11) - x86_64 Intel/AMD 
 # windows/arm64 - Windows (11 ARM) - aarch64 Qualcomm Snapdragon
-PLATFORMS=linux/amd64,linux/arm64,darwin/arm64,darwin/amd64,windows/amd64,windows/arm64
+PLATFORMS=linux/amd64,linux/arm64,darwin/amd64,darwin/arm64
 DIST_DIR=dist
 DIST_NAME=ownstak-proxy
 REGISTRY_URL=028957770100.dkr.ecr.us-east-2.amazonaws.com
