Updated container registry (#6)
* Updated registry

* Updated registry

* Updated region

* Updated region

* Updated alias

--- a/.env
+++ b/.env
@@ -19,7 +19,7 @@ CONSOLE_URL=https://console.ownstak.com
 PLATFORMS=linux/amd64,linux/arm64,darwin/amd64,darwin/arm64
 DIST_DIR=dist
 DIST_NAME=ownstak-proxy
-REGISTRY_URL=028957770100.dkr.ecr.us-east-2.amazonaws.com
+REGISTRY_URL=public.ecr.aws/f0l1l8j3
 
 # Run-time app configuration
 # Below variables can be optionally set to override the default values when running the app.
