--- a/.env
+++ b/.env
@@ -31,6 +31,15 @@ HTTPS_CERT=./certs/server.crt
 HTTPS_CERT_KEY=./certs/server.key
 HTTPS_CERT_CA=./certs/ca.pem
 LOG_LEVEL=debug
+#GOMEMLIMIT=32MiB # Memory size that Golang garbage collector will try to reach if possible)
+
+# Image Optimizer's libvips config
+VIPS_DEBUG=true # (enable verbose debug output)
+#VIPS_TRACE=1 # (enable trace output)
+#VIPS_LEAK=1 # (enable memory leak detection)
+#VIPS_CONCURRENCY=4 # (defaults to available CPU threads / 2)
+#VIPS_MAX_MEM=64 # (defaults to available VIPS_CONCURRENCY * (128MB per thread))
+#VIPS_CACHE_MAX=64 # (defaults to 64MiB, can be set to 0 to disable caching)
 
 # AWS Credentials
 # Put to .env.local to test locally
