Added X-Own-Merge-Headers feature, Renamed internal paths, libc loading (#10)
* Added merge headers feature

* Changed internal path, merge headers

* Changed internal path, merge headers

* Fix libc import

* Fix libc import

--- a/.env
+++ b/.env
@@ -44,5 +44,6 @@ VIPS_DEBUG=true # (enable verbose debug output)
 # AWS Credentials
 # Put to .env.local to test locally
 AWS_REGION=us-east-2
+#AWS_ACCOUNT_ID=<your-account-id> # (optional, if not set, the account ID will be retrieved from the caller identity)
 #AWS_ACCESS_KEY_ID=<your-access-key-id>
 #AWS_SECRET_ACCESS_KEY=<your-secret-access-key>
