draft: Provisioning + AWS credentials fixes (#15)
* env test

* Updated env vars, added provider

* Updated env vars, added provider

--- a/.env
+++ b/.env
@@ -19,7 +19,7 @@ CONSOLE_URL=https://console.ownstak.com
 PLATFORMS=linux/amd64,linux/arm64,darwin/amd64,darwin/arm64
 DIST_DIR=dist
 DIST_NAME=ownstak-proxy
-REGISTRY_URL=public.ecr.aws/b6v5v6o1
+REGISTRY_URL=public.ecr.aws/ownstak
 
 # Run-time app configuration
 # Below variables can be optionally set to override the default values when running the app.
@@ -31,6 +31,7 @@ HTTPS_CERT=./certs/server.crt
 HTTPS_CERT_KEY=./certs/server.key
 HTTPS_CERT_CA=./certs/ca.pem
 LOG_LEVEL=debug
+PROVIDER=aws # (required env variable with provider name)
 #GOMEMLIMIT=32MiB # Memory size that Golang garbage collector will try to reach if possible)
 
 # Image Optimizer's libvips config
