--- a/.env
+++ b/.env
@@ -36,6 +36,7 @@ PROVIDER=aws # (required env variable with provider name)
 
 # Image Optimizer's libvips config
 VIPS_DEBUG=true # (enable verbose debug output)
+MALLOC_ARENA_MAX=2 # (limits glibc max memory pools for vips and as result reduces memory usage)
 #VIPS_TRACE=1 # (enable trace output)
 #VIPS_LEAK=1 # (enable memory leak detection)
 #VIPS_CONCURRENCY=4 # (defaults to available CPU threads / 2)
