--- a/.air.toml
+++ b/.air.toml
@@ -11,7 +11,7 @@ tmp_dir = "tmp"
   cmd = "go build -o ./tmp/ownstak-proxy ./src"
   post_cmd = []
   delay = 1000
-  exclude_dir = ["tmp", "certs", "dist", "scripts"]
+  exclude_dir = ["tmp", "certs", "dist", "scripts", "mocks", "e2e-tests"]
   exclude_file = []
   exclude_regex = ["_test.go"]
   exclude_unchanged = false
