--- a/.env
+++ b/.env
@@ -43,6 +43,11 @@ MALLOC_ARENA_MAX=2 # (limits glibc max memory pools for vips and as result reduc
 #VIPS_MAX_MEM=64 # (defaults to available VIPS_CONCURRENCY * (128MB per thread))
 #VIPS_CACHE_MAX=64 # (defaults to 64MiB, can be set to 0 to disable caching)
 
+# AWS Mocks for local development
+AWS_LAMBDA_ENDPOINT=http://127.0.0.1:4001
+AWS_ORGANIZATIONS_ENDPOINT=http://127.0.0.1:4002
+AWS_STS_ENDPOINT=http://127.0.0.1:4003
+
 # AWS Credentials
 # Put to .env.local to test locally
 AWS_REGION=us-east-2
