--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -14,6 +14,10 @@ env:
   GO_VERSION: 1.23.0
   DEBIAN_FRONTEND: noninteractive
 
+concurrency:
+  group: test-${{ github.ref }}
+  cancel-in-progress: true
+
 defaults:
     run:
         shell: bash
