Read console url from env var & fixed mocks for latest aws sdk (#34)
* read console url from env var

* read console url from env var

* Updated env to utils

* updated url

* fixed tests

* format

* fix vcs

* update go version

* go 1.23

--- a/.env
+++ b/.env
@@ -2,10 +2,6 @@
 # Below variables are baked into the binary during the build process.
 APP_NAME="OwnStak Proxy"
 VERSION=0.1.11
-# The URL of the OwnStak Console
-# This is used to redirect the user to the OwnStak Console when the Lambda function is not found.
-# e.g: https://console.ownstak.com/revive?host=ownstak-2.aws-account1.ownstak.link
-CONSOLE_URL=https://console.ownstak.com
 
 # Target platforms to build for, e.g. linux/amd64,linux/arm64
 # See: https://pkg.go.dev/internal/platform
@@ -31,7 +27,10 @@ HTTPS_CERT=./certs/server.crt
 HTTPS_CERT_KEY=./certs/server.key
 HTTPS_CERT_CA=./certs/ca.pem
 LOG_LEVEL=debug
+
 PROVIDER=aws # (required env variable with provider name)
+CONSOLE_URL=http://localhost:5173
+SUPPORT_URL=http://dev.ownstak.com/support
 #GOMEMLIMIT=32MiB # Memory size that Golang garbage collector will try to reach if possible)
 
 # Image Optimizer's libvips config
@@ -48,9 +47,11 @@ AWS_LAMBDA_ENDPOINT=http://127.0.0.1:4001
 AWS_ORGANIZATIONS_ENDPOINT=http://127.0.0.1:4002
 AWS_STS_ENDPOINT=http://127.0.0.1:4003
 
-# AWS Credentials
-# Put to .env.local to test locally
-AWS_REGION=us-east-2
-#AWS_ACCOUNT_ID=<your-account-id> # (optional, if not set, the account ID will be retrieved from the caller identity)
-#AWS_ACCESS_KEY_ID=<your-access-key-id>
-#AWS_SECRET_ACCESS_KEY=<your-secret-access-key>
+# AWS Credentials for local mocks.
+# Comment them out or put real credentials to .env.local to test proxy with real AWS account.
+# When no credentials are present, AWS SDK fallbacks to ~/.aws/credentials, then metadata service (http://169.254.169.254) etc...
+# When AWS_ACCOUNT_ID is not set, the account ID is retrieved from the caller identity
+AWS_REGION=us-east-1
+AWS_ACCOUNT_ID=your-account-id
+AWS_ACCESS_KEY_ID=your-access-key-id
+AWS_SECRET_ACCESS_KEY=your-secret-access-key
