LAY-161,LAY-153: Added throttling, e2e streaming (#73)
* streaming, throttling

* streaming, throttling

* updated status codes

* Updated tests

* resolved conflicts

* resolved conflicts

* Added split chunks edge case test

* Fixed multiple body delimiters handling

* simplified

* simplified

* readme

* Added comment

--- a/.env
+++ b/.env
@@ -31,7 +31,7 @@ LOG_LEVEL=debug
 PROVIDER=aws # (required env variable with provider name)
 CONSOLE_URL=http://localhost:5173
 SUPPORT_URL=http://dev.ownstak.com/support
-#GOMEMLIMIT=32MiB # Memory size that Golang garbage collector will try to reach if possible)
+#MAX_MEMORY=4096MB
 
 # Image Optimizer's libvips config
 VIPS_DEBUG=true # (enable verbose debug output)
