--- a/.env
+++ b/.env
@@ -48,7 +48,7 @@ AWS_ORGANIZATIONS_ENDPOINT=http://127.0.0.1:4002
 AWS_STS_ENDPOINT=http://127.0.0.1:4003
 
 # AWS Credentials for local mocks.
-# Comment them out or put real credentials to .env.local to test proxy with real AWS account.
+# Put real credentials to .env.local to test proxy with real AWS account.
 # When no credentials are present, AWS SDK fallbacks to ~/.aws/credentials, then metadata service (http://169.254.169.254) etc...
 # When AWS_ACCOUNT_ID is not set, the account ID is retrieved from the caller identity
 AWS_REGION=us-east-1
