--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -3,7 +3,13 @@ name: Release
 on:
   release:
     types: [published]
-
+  workflow_dispatch:
+      inputs:
+          version_tag:
+              description: 'Version tag (e.g., next, latest)'
+              required: true
+              type: string
+              default: 'next'
 env:
   GO_VERSION: 1.24.3
   AWS_ACCESS_KEY_ID: ${{ vars.ECR_AWS_ACCESS_KEY_ID }}
@@ -16,20 +22,18 @@ defaults:
     shell: bash
 
 jobs:
-  release-next:
-    name: Build and release
+  release:
+    name: Release
     timeout-minutes: 20
-    runs-on: [self-hosted, linux, arm64]
-    container:
-      image: ubuntu:22.04
+    runs-on: ubuntu-latest
     permissions:
       contents: write
     steps:
       - name: Install Basic Dependencies
         run: |
-          apt-get update
-          apt-get install --no-install-recommends -y ca-certificates curl unzip git sudo apt-transport-https gnupg lsb-release
-          update-ca-certificates
+          sudo apt-get update
+          sudo apt-get install --no-install-recommends -y ca-certificates curl unzip git sudo apt-transport-https gnupg lsb-release
+          sudo update-ca-certificates
 
       - uses: actions/checkout@v4
 
@@ -48,13 +52,6 @@ jobs:
 
       - name: Display Go version
         run: go version
-
-      - name: Set version from release tag
-        run: |
-          ./scripts/version.sh set ${GITHUB_REF_NAME#v}
-
-      - name: Build the project
-        run: ./scripts/build.sh
 
       - name: Install Docker
         run: |
@@ -76,7 +73,31 @@ jobs:
           aws configure set aws_secret_access_key "${{ env.AWS_SECRET_ACCESS_KEY }}" --profile default
           aws configure set aws_region "${{ env.AWS_REGION }}" --profile default
 
-      - name: Release the version
+      - name: Determine version tag
+        id: version_tag
+        run: |
+            if [ "${{ github.event_name }}" == "release" ] || [ "${{ inputs.version_tag }}" == "" ]; then
+                echo "version_tag=latest" >> $GITHUB_OUTPUT
+            else
+                echo "version_tag=${{ inputs.version_tag }}" >> $GITHUB_OUTPUT
+            fi
+
+      - name: Set version from release
+        if: steps.version_tag.outputs.version_tag == 'latest'
+        run: ./scripts/version.sh set ${GITHUB_REF_NAME#v}
+
+      - name: Append version tag
+        if: steps.version_tag.outputs.version_tag != 'latest'
+        run: |
+          COMMIT_HASH=$(echo "${{ github.sha }}" | cut -c1-7)
+          VERSION_TAG="${{ steps.version_tag.outputs.version_tag }}"
+          TIMESTAMP=$(date +%s)
+          ./scripts/version.sh tag "${VERSION_TAG}-${COMMIT_HASH}-${TIMESTAMP}" # e.g. 1.0.1-next-a1b2c3d-1744196863
+
+      - name: Build the project
+        run: ./scripts/build.sh
+
+      - name: Release the docker images
         run: ./scripts/release.sh
 
       - name: Bump version for the next release
