--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -21,11 +21,9 @@ defaults:
 jobs:
     format-check:
         name: Tests & format check
-        runs-on: [self-hosted, linux, arm64]
+        runs-on: ubuntu-slim
         timeout-minutes: 15
         continue-on-error: true
-        container:
-            image: node:22
         steps:
             - name: Checkout
               uses: actions/checkout@v4
@@ -42,6 +40,14 @@ jobs:
               uses: actions/setup-go@v5
               with:
                 go-version: ${{ env.GO_VERSION }}
+
+            - name: Setup Node.js 22
+              uses: actions/setup-node@v4
+              with:
+                node-version: '22'
+
+            - name: Build the project
+              run: ./scripts/build.sh
 
             - name: Run tests
               run: ./scripts/test.sh
