--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -47,6 +47,7 @@ jobs:
         with:
           path: |
             ~/go/pkg/mod
+            ~/go/bin
             ~/.cache/go-build
           key: ${{ runner.os }}-build-cache-${{ env.GO_VERSION }}-${{ hashFiles('go.sum') }}
 
