--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -33,6 +33,7 @@ jobs:
               with:
                 path: |
                   ~/go/pkg/mod
+                  ~/go/bin
                   ~/.cache/go-build
                 key: ${{ runner.os }}-build-cache-${{ env.GO_VERSION }}-${{ hashFiles('go.sum') }}
 
