--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -64,7 +64,7 @@ jobs:
         run: |
           curl "https://awscli.amazonaws.com/awscli-exe-linux-aarch64.zip" -o "awscliv2.zip"
           unzip awscliv2.zip > /dev/null 2>&1
-          ./aws/install
+          ./aws/install || ./aws/install --update
           rm -rf aws awscliv2.zip
           aws --version
 
