--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -54,11 +54,11 @@ jobs:
       - name: Display Go version
         run: go version
 
-      - name: Install Docker
-        run: |
-          curl -fsSL https://get.docker.com -o get-docker.sh
-          sudo sh get-docker.sh
-          docker --version
+      # - name: Install Docker
+      #  run: |
+      #    curl -fsSL https://get.docker.com -o get-docker.sh
+      #    sudo sh get-docker.sh
+      #    docker --version
 
       - name: Install AWS CLI
         run: |
