--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -42,7 +42,7 @@ jobs:
         with:
           go-version: ${{ env.GO_VERSION }}
 
-      - name: 'Cache'
+      - name: 'Project cache'
         uses: actions/cache@v4
         with:
           path: |
@@ -50,6 +50,15 @@ jobs:
             ~/go/bin
             ~/.cache/go-build
           key: ${{ runner.os }}-build-cache-${{ env.GO_VERSION }}-${{ hashFiles('go.sum') }}
+
+      - name: Docker buildx cache
+        id: docker-cache
+        uses: actions/cache@v4
+        with:
+          path: /tmp/.buildx-cache
+          key: ${{ runner.os }}-docker-buildx-${{ hashFiles('Dockerfile', 'scripts/**') }}
+          restore-keys: |
+            ${{ runner.os }}-docker-buildx-
 
       - name: Display Go version
         run: go version
@@ -99,6 +108,8 @@ jobs:
         run: ./scripts/build.sh
 
       - name: Release the docker images
+        env:
+          DOCKER_BUILDX_CACHE_DIR: /tmp/.buildx-cache
         run: ./scripts/release.sh
 
       - name: Bump version for the next release
