--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -28,14 +28,13 @@ jobs:
             - name: Checkout
               uses: actions/checkout@v4
 
-            - name: 'Cache'
+            - name: 'Build cache'
               uses: actions/cache@v4
               with:
-                path: |
-                  ~/go/pkg/mod
-                  ~/go/bin
-                  ~/.cache/go-build
+                path: ~/.cache/go-build
                 key: ${{ runner.os }}-build-cache-${{ env.GO_VERSION }}-${{ hashFiles('go.sum') }}
+                restore-keys: |
+                  ${{ runner.os }}-build-cache-${{ env.GO_VERSION }}-
 
             - name: Install Go ${{ env.GO_VERSION }}
               uses: actions/setup-go@v5
