--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -3,5 +3,5 @@ updates:
     - package-ecosystem: gomod
       directory: '/'
       schedule:
-          interval: daily
-      open-pull-requests-limit: 5
+          interval: weekly
+      open-pull-requests-limit: 10
