--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -10,7 +10,11 @@ on:
               required: true
               type: string
               default: 'next'
-  
+
+env:
+  GO_VERSION: 1.24.3
+  DEBIAN_FRONTEND: noninteractive
+
 defaults:
   run:
     shell: bash
@@ -23,12 +27,6 @@ jobs:
     runs-on: ubuntu-latest
     permissions:
       contents: write
-    env:
-      GO_VERSION: 1.24.3
-      AWS_ACCESS_KEY_ID: ${{ secrets.ECR_AWS_ACCESS_KEY_ID }}
-      AWS_SECRET_ACCESS_KEY: ${{ secrets.ECR_AWS_SECRET_ACCESS_KEY }}
-      AWS_REGION: ${{ vars.ECR_AWS_REGION }}
-      DEBIAN_FRONTEND: noninteractive
     steps:
       - name: Install Basic Dependencies
         run: |
@@ -66,22 +64,6 @@ jobs:
       - name: Display Docker version
         run: docker --version
 
-      - name: Check that secrets are set
-        run: |
-          if [ -z "$AWS_ACCESS_KEY_ID" ]; then
-            echo "AWS_ACCESS_KEY_ID is not set"
-            exit 1
-          fi
-          if [ -z "$AWS_SECRET_ACCESS_KEY" ]; then
-            echo "AWS_SECRET_ACCESS_KEY is not set"
-            exit 1
-          fi
-          if [ -z "$AWS_REGION" ]; then
-            echo "AWS_REGION is not set"
-            exit 1
-          fi
-          echo "✅ Secrets are set"
-
       # - name: Install Docker
       #  run: |
       #    curl -fsSL https://get.docker.com -o get-docker.sh
@@ -98,9 +80,9 @@ jobs:
 
       - name: Configure AWS CLI
         run: |
-          aws configure set aws_access_key_id "${{ env.AWS_ACCESS_KEY_ID }}" --profile default
-          aws configure set aws_secret_access_key "${{ env.AWS_SECRET_ACCESS_KEY }}" --profile default
-          aws configure set aws_region "${{ env.AWS_REGION }}" --profile default
+          aws configure set aws_access_key_id "${{ secrets.ECR_AWS_ACCESS_KEY_ID }}" --profile default
+          aws configure set aws_secret_access_key "${{ secrets.ECR_AWS_SECRET_ACCESS_KEY }}" --profile default
+          aws configure set aws_region "${{ vars.ECR_AWS_REGION }}" --profile default
 
       - name: Determine version tag
         id: version_tag
@@ -139,7 +121,9 @@ jobs:
 
       - name: Upload release binaries
         if: steps.version_tag.outputs.version_tag == 'latest'
-        uses: softprops/action-gh-release@v2.2.1
+        # Version is pinned to hash of v2.2.1 to avoid potentially breaking/harmful changes in third-party action.
+        # See https://github.com/softprops/action-gh-release/releases/tag/v2.2.1
+        uses: softprops/action-gh-release@c95fe1489396fe8a9eb87c0abf8aa5b2ef267fda
         with:
           files: dist/*
         env:
